# VascularCircuit0D

./: .gitignore  CMakeLists.txt  README.md  plot.py  pyproject.toml  solver_serial.cpp
.github/workflows/: cmake-build-release.yml  cmake-build-test.yml  cmake-multi-platform.yml
Validation/: Validation_Pressure_AAo.csv  extra_pressure_ani.py  extra_pressures.py  validation_plot.py  validation_plot_with_flow.py
examples/: solver_serial_2comp.cpp  solver_serial_5comp.cpp
include/: solver_core.hpp
input/: AAo.csv  AAo2.csv  AAo3.csv  AAo4.csv  input.inp
src/: solver_core.cpp  solver_main.cpp  solver_serial.cpp
tests/: test_serial_solver.cpp
